<resources>
    <string name="app_name">Smart Shopping</string>
    <string name="phone_number">Phone number</string>
    <string name="submit">Submit</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="otp">OTP</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Logout</string>
    <string name="shop_details">Shop Details</string>
    <string name="shop_name">Shop Name</string>
    <string name="owner_name">Owner Name</string>
    <string name="location">Location</string>
    <string name="week_days">Week Days</string>
    <string name="week_ends">Week Ends</string>
    <string name="opens">Opens</string>
    <string name="closed">Closed</string>
    <string name="category">Category</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="rating">4.5</string>
    <string name="timings">Timings</string>
    <string name="others">Others</string>
    <string name="edit">Edit</string>
    <string name="add_item">Add Item</string>
    <string name="shop">Shop</string>
    <string name="login_preference">login</string>
    <string name="phone_preference">phone</string>
    <string name="current_location">Current Location</string>
    <string name="using_gps">Using GPS</string>
    <string name="select_shop_location">SELECT SHOP LOCATION</string>
    <string name="confirm_location">CONFIRM LOCATION</string>
    <string name="please_wait">Pleas wait...</string>
    <string name="loading">Loading...</string>
    <string name="grocery_name">Grocery Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="brand">Brand</string>
    <string name="login_to_continue">Please login to continue</string>
    <string name="shopkeeper">ShopKeeper</string>
    <string name="customer">Customer</string>
    <string name="rupee">\u20B9</string>
    <string name="user_type">User Type</string>
    <string name="guest">Guest</string>
</resources>